Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31173

Server crashes when setting wsrep_cluster_address after adding invalid value to wsrep_allowlist table

    XMLWordPrintable

Details

    Description

      SET @wsrep_cluster_address_orig=@@GLOBAL.wsrep_cluster_address;
      SET wsrep_on=0;
      INSERT INTO mysql.wsrep_allowlist (ip) VALUES (0);
      SET GLOBAL wsrep_cluster_address=@wsrep_cluster_address_orig;
      SELECT 1;
      

      Leads to

      11.0.1 f2dc4d4c10ac36a73b5c1eb765352d3aee808d66 (Optimized)

      Core was generated by `/test/VARIOUS_BUILDS/GAL_MD200223-mariadb-11.0.1-linux-x86_64-opt/bin/mysqld --'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x000055c8470a23f3 in my_read (Filedes=Filedes@entry=44, 
          Buffer=Buffer@entry=0x148d67ffc530 "Linux version 5.4.0-74-generic (buildd@lgw01-amd64-038) (gcc version 9.3.0 (Ubuntu 9.3.0-17ubuntu1~20.04)) #83-Ubuntu SMP Sat May 8 02:35:39 UTC 2021\nonds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0)
          at /test/11.0_opt/mysys/my_read.c:63
      [Current thread is 1 (Thread 0x148d67fff700 (LWP 3055332))]
      (gdb) bt
      #0  0x000055c8470a23f3 in my_read (Filedes=Filedes@entry=44, Buffer=Buffer@entry=0x148d67ffc530 "Linux version 5.4.0-74-generic (buildd@lgw01-amd64-038) (gcc version 9.3.0 (Ubuntu 9.3.0-17ubuntu1~20.04)) #83-Ubuntu SMP Sat May 8 02:35:39 UTC 2021\nonds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0) at /test/11.0_opt/mysys/my_read.c:63
      #1  0x000055c846c09c7f in output_core_info () at /test/11.0_opt/sql/signal_handler.cc:91
      #2  0x000055c846c0a112 in handle_fatal_signal (sig=6) at /test/11.0_opt/sql/signal_handler.cc:353
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x0000148dd9ce8859 in __GI_abort () at abort.c:79
      #6  0x0000148dda0a7911 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #7  0x0000148dda0b338c in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #8  0x0000148dda0b33f7 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #9  0x0000148dda0b36a9 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #10 0x0000148dd9745dcc in gu::ThrowError::~ThrowError (this=0x148d67ffe6b0, __in_chrg=<optimized out>) at /test/galera_4x/galerautils/src/gu_throw.hpp:73
      #11 0x0000148dd98fff51 in throw_sync_op_error (engine=<optimized out>, prefix=<optimized out>) at /usr/include/c++/9/ext/new_allocator.h:89
      #12 0x0000148dd99046ac in gu::AsioAcceptorReact::accept (this=0x148dbc01e200) at /usr/include/c++/9/bits/shared_ptr_base.h:1020
      #13 0x0000148dd97a03ea in galera::ist::Receiver::run (this=0x55c84a396ed8) at /usr/include/c++/9/bits/shared_ptr_base.h:1020
      #14 0x0000148dd97a205d in run_receiver_thread (arg=<optimized out>) at /test/galera_4x/galera/src/ist.cpp:161
      #15 0x0000148dda1f9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #16 0x0000148dd9de5133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      11.1.0 3ef111610b7f8a6a323975cfdf4a4257feb9dcd9 (Debug)

      Core was generated by `/test/GAL_MD280423-mariadb-11.1.0-linux-x86_64-dbg/bin/mysqld --defaults-file=/'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x00005649b455ac90 in my_read (Filedes=Filedes@entry=44, 
          Buffer=Buffer@entry=0x14cd142e2430 "Linux version 5.4.0-74-generic (buildd@lgw01-amd64-038) (gcc version 9.3.0 (Ubuntu 9.3.0-17ubuntu1~20.04)) #83-Ubuntu SMP Sat May 8 02:35:39 UTC 2021\nonds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0)
          at /test/11.1_dbg/mysys/my_read.c:63
      63	      int got_errno= my_errno= errno;
      [Current thread is 1 (Thread 0x14cd142e5700 (LWP 2194462))]
      (gdb) bt
      #0  0x00005649b455ac90 in my_read (Filedes=Filedes@entry=44, Buffer=Buffer@entry=0x14cd142e2430 "Linux version 5.4.0-74-generic (buildd@lgw01-amd64-038) (gcc version 9.3.0 (Ubuntu 9.3.0-17ubuntu1~20.04)) #83-Ubuntu SMP Sat May 8 02:35:39 UTC 2021\nonds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0) at /test/11.1_dbg/mysys/my_read.c:63
      #1  0x00005649b3e5c618 in output_core_info () at /test/11.1_dbg/sql/signal_handler.cc:91
      #2  0x00005649b3e5cb8d in handle_fatal_signal (sig=6) at /test/11.1_dbg/sql/signal_handler.cc:353
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014cd4b134859 in __GI_abort () at abort.c:79
      #6  0x000014cd4b4f3911 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #7  0x000014cd4b4ff38c in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #8  0x000014cd4b4ff3f7 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #9  0x000014cd4b4ff6a9 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #10 0x000014cd4ab90d6c in gu::ThrowError::~ThrowError (this=0x14cd142e45b0, __in_chrg=<optimized out>) at /test/galera_4x_dbg/galerautils/src/gu_throw.hpp:73
      #11 0x000014cd4ad4b141 in throw_sync_op_error (engine=<optimized out>, prefix=<optimized out>) at /usr/include/c++/9/ext/new_allocator.h:89
      #12 0x000014cd4ad4f89c in gu::AsioAcceptorReact::accept (this=0x14cd2c022220) at /usr/include/c++/9/bits/shared_ptr_base.h:1020
      #13 0x000014cd4abeb3ea in galera::ist::Receiver::run (this=0x5649b796f2d8) at /usr/include/c++/9/bits/shared_ptr_base.h:1020
      #14 0x000014cd4abed06d in run_receiver_thread (arg=<optimized out>) at /test/galera_4x_dbg/galera/src/ist.cpp:161
      #15 0x000014cd4b645609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #16 0x000014cd4b231133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 4d 4.5h
                4d 4.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.